--- a/SnapchatClone/Base.lproj/Main.storyboard
+++ b/SnapchatClone/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Log In View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LogInView" customModule="SnapchatClone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="logInView" id="BYZ-38-t0r" customClass="LogInView" customModule="SnapchatClone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -189,7 +189,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="olE-vQ-XSQ">
             <objects>
-                <tabBarController id="zTI-6A-V55" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBar" id="zTI-6A-V55" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="1x6-bi-zm7"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lpb-EH-doI">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
