--- a/SnapchatClone/Base.lproj/Main.storyboard
+++ b/SnapchatClone/Base.lproj/Main.storyboard
@@ -166,15 +166,56 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Vwc-q0-8F1">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="803"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="557" id="tze-Me-gOj" customClass="FeedTableViewCell" customModule="SnapchatClone" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="557"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tze-Me-gOj" id="B6Z-zJ-hfb">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="557"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pK6-yI-jG8">
+                                                    <rect key="frame" x="102.66666666666669" y="27" width="188" height="52"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="52" id="0W2-BB-04w"/>
+                                                        <constraint firstAttribute="width" constant="188" id="nrg-xN-t2T"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OyK-CH-jW9">
+                                                    <rect key="frame" x="20" y="98" width="353" height="459"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="353" id="SBk-ND-JaN"/>
+                                                        <constraint firstAttribute="height" constant="459" id="ZBj-pE-PPq"/>
+                                                        <constraint firstAttribute="width" constant="353" id="v4m-Mk-yJi"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="pK6-yI-jG8" firstAttribute="centerX" secondItem="OyK-CH-jW9" secondAttribute="centerX" id="3ak-98-LT9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="OyK-CH-jW9" secondAttribute="bottom" constant="-11" id="GM6-Lx-bH1"/>
+                                                <constraint firstItem="pK6-yI-jG8" firstAttribute="centerX" secondItem="B6Z-zJ-hfb" secondAttribute="centerX" id="T1r-LA-JGg"/>
+                                                <constraint firstItem="pK6-yI-jG8" firstAttribute="top" secondItem="B6Z-zJ-hfb" secondAttribute="topMargin" constant="16" id="dly-eQ-pzp"/>
+                                                <constraint firstItem="OyK-CH-jW9" firstAttribute="top" secondItem="pK6-yI-jG8" secondAttribute="bottom" constant="19" id="jfs-yn-2Jm"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="feedImageView" destination="OyK-CH-jW9" id="HgV-cZ-Ipa"/>
+                                            <outlet property="userNameLbl" destination="pK6-yI-jG8" id="edK-Dx-CmX"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="MJj-V0-1aA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Vwc-q0-8F1" firstAttribute="leading" secondItem="MJj-V0-1aA" secondAttribute="leading" id="3eA-y3-RE0"/>
-                            <constraint firstItem="Vwc-q0-8F1" firstAttribute="top" secondItem="MJj-V0-1aA" secondAttribute="top" id="bfs-JX-7UH"/>
-                            <constraint firstItem="MJj-V0-1aA" firstAttribute="bottom" secondItem="Vwc-q0-8F1" secondAttribute="bottom" id="fA7-ro-9Sb"/>
-                            <constraint firstItem="MJj-V0-1aA" firstAttribute="trailing" secondItem="Vwc-q0-8F1" secondAttribute="trailing" id="fMS-ov-v4E"/>
+                            <constraint firstItem="Vwc-q0-8F1" firstAttribute="top" secondItem="MJj-V0-1aA" secondAttribute="top" id="1W4-vT-vFJ"/>
+                            <constraint firstItem="Vwc-q0-8F1" firstAttribute="bottom" secondItem="MJj-V0-1aA" secondAttribute="bottom" id="J9b-6f-JHt"/>
+                            <constraint firstItem="Vwc-q0-8F1" firstAttribute="leading" secondItem="MJj-V0-1aA" secondAttribute="leading" id="QNP-jA-Plc"/>
+                            <constraint firstItem="Vwc-q0-8F1" firstAttribute="centerX" secondItem="4hU-Br-B0g" secondAttribute="centerX" id="W0K-Ug-v9M"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Feed" image="f.circle.fill" catalog="system" id="RRf-qs-rfB"/>
@@ -184,7 +225,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UvD-Fp-HAZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1835" y="-318"/>
+            <point key="canvasLocation" x="1834.3511450381679" y="-318.3098591549296"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="olE-vQ-XSQ">
@@ -197,8 +238,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="QUv-OM-Fua" kind="relationship" relationship="viewControllers" id="Qpa-Qr-z4o"/>
                         <segue destination="HBu-9f-B48" kind="relationship" relationship="viewControllers" id="fbm-fD-Sfr"/>
+                        <segue destination="QUv-OM-Fua" kind="relationship" relationship="viewControllers" id="Qpa-Qr-z4o"/>
                         <segue destination="PgD-P6-UJh" kind="relationship" relationship="viewControllers" id="JJT-RV-Iaa"/>
                     </connections>
                 </tabBarController>
